PROJECT CAAS GROUP 2
GROUP 2

--- a/public/text.html
+++ b/public/text.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css" />
     <script src="index.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
-    <title>Monitoring Room - Building's Curvew Reminder</title>
+    <title>Monitoring Room - Building's Curfew Reminder</title>
   </head>
   <body>
     <header>
@@ -20,31 +20,87 @@
         <div class="data-card">
           <h2>TULT.13.09</h2>
           <div class="data-box">
-            <h3>Ultrasonic Sensor</h3>
             <p id="v0"></p>
           </div>
           <div class="data-box">
-            <h3>Virtual Pin V1:</h3>
             <p id="v1"></p>
           </div>
+        </div>
+        <div class="data-card">
+          <h2>TULT.13.10</h2>
           <div class="data-box">
-            <h3>Virtual Pin V3:</h3>
-            <p id="v3"></p>
+            <p id="v2"></p>
           </div>
           <div class="data-box">
-            <h3>Virtual Pin V4:</h3>
-            <p id="v4"></p>
+            <p id="v3"></p>
+          </div>
+        </div>
+        <div class="data-card">
+          <h2>TULT.13.11</h2>
+          <div class="data-box">
+            <p id="v2"></p>
+          </div>
+          <div class="data-box">
+            <p id="v3"></p>
+          </div>
+        </div>
+        <div class="data-card">
+          <h2>TULT.13.13</h2>
+          <div class="data-box">
+            <p id="v2"></p>
+          </div>
+          <div class="data-box">
+            <p id="v3"></p>
+          </div>
+        </div>
+        <div class="data-card">
+          <h2>TULT.13.14</h2>
+          <div class="data-box">
+            <p id="v2"></p>
+          </div>
+          <div class="data-box">
+            <p id="v3"></p>
+          </div>
+        </div>
+        <div class="data-card">
+          <h2>TULT.13.15</h2>
+          <div class="data-box">
+            <p id="v2"></p>
+          </div>
+          <div class="data-box">
+            <p id="v3"></p>
+          </div>
+        </div>
+        <div class="data-card">
+          <h2>TULT.13.16</h2>
+          <div class="data-box">
+            <p id="v2"></p>
+          </div>
+          <div class="data-box">
+            <p id="v3"></p>
+          </div>
+        </div>
+        <div class="data-card">
+          <h2>TULT.13.17</h2>
+          <div class="data-box">
+            <p id="v2"></p>
+          </div>
+          <div class="data-box">
+            <p id="v3"></p>
           </div>
         </div>
       </div>
     </main>
+    <footer>
+      <h3>Andi Farhan Trisaputra | Ghina Mufidah | Rifki Rosada | Ressya Putri Denanda</h3>
+    </footer>
     <script>
       let typed = new Typed(".auto-input",{
-      strings: ["Building's Curvew Reminder", "By : Group 2"],
+      strings: ["Building's Curfew Reminder", "By : Group 2"],
       typeSpeed: 150,
       backSpeed: 50,
       loop: true
       });
     </script>
-  </body>
+  </body>
 </html>
